test/lambda/negative/semantic/binary_invalid_hex.ls
// @negative
// @description: binary hex payloads reject non-hexadecimal source characters
b'\xZZ'
